test/samples/error/err_index_out_of_range.w
var x = [1,2,3,4]
x[6] = 5
print (x)